src/test/ui/asm/asm-in-bad-modifier.stderr
error[E0662]: input operand constraint contains '='
  --> $DIR/asm-in-bad-modifier.rs:23:39
   |
LL |         asm!("mov $1, $0" : "=r"(x) : "=r"(5));
   |                                       ^^^^

error[E0663]: input operand constraint contains '+'
  --> $DIR/asm-in-bad-modifier.rs:24:39
   |
LL |         asm!("mov $1, $0" : "=r"(y) : "+r"(5));
   |                                       ^^^^

error: aborting due to 2 previous errors

